docs: add sha256sum for 24.1.5

--- a/docs/relnotes/24.1.5.rst
+++ b/docs/relnotes/24.1.5.rst
@@ -19,7 +19,7 @@ SHA256 checksum
 
 ::
 
-    TBD.
+    02761ffd965dd64b95421ebfca1191d73724aba00f30034009237564f34cf976  mesa-24.1.5.tar.xz
 
 
 New features
